--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "mcdk",
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.1.1",
+  "dependencies": {
+    "mithril": "^2.0.4"
+  }
 }
