--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "mcdk",
   "packageManager": "yarn@3.1.1",
+  "source": "src/index.html",
   "dependencies": {
     "mithril": "^2.0.4"
   },
   "devDependencies": {
     "parcel": "^2.1.0"
+  },
+  "scripts": {
+    "start": "yarn parcel",
+    "build": "yarn parcel build"
   }
 }
