--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "packageManager": "yarn@3.1.1",
   "source": "src/index.html",
   "dependencies": {
+    "aws-cdk-lib": "^2.3.0",
     "mithril": "^2.0.4"
   },
   "devDependencies": {
